# lumi-backend

./: main.py  pyproject.toml
app/: __version__.py
app/api/: deps.py
app/core/: config.py
app/db/: session.py
