[tool.poetry]
name = "lumi"
version = "0.1.0"
description = ""
authors = ["Aditya Jha <4adityajha@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
motor = "^3.4.0"
pydantic-settings = "^2.3.3"
odmantic = "^1.0.2"
tenacity = "^8.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
